Fixed vertical spacing, fixed blog aside size during phone view.

--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@ html {
 }
 
 p {
-  margin: 1.4vh 1.4vw;
-  font-size: 2vw;
+  font-size: 1rem;
+  margin: 1.4rem;
 }
 
 h1,
@@ -22,14 +22,14 @@ h2,
 h3,
 h4,
 h5 {
-  font-size: 3vw;
+  font-size: 1.5rem;
 }
 
 /*** BODY ***/
 .body {
   margin: 1.4vw;
   padding: 1vh 1vw;
-  text-align: justify;
+  text-align: left;
 }
 
 .header {
@@ -43,7 +43,7 @@ h5 {
   border: 3px solid black;
   color: black;
   padding: .5vh .5vw;
-  font-size: 2vw;
+  font-size: 1rem;
   text-decoration: none;
 }
 
@@ -80,7 +80,7 @@ nav a:hover {
 }
 
 .unordered li {
-  font-size: 2vw;
+  font-size: 1rem;
   list-style-type: none;
   padding: 1vw 0 1vw 0;
   margin: 1vh 1vw;
@@ -105,7 +105,7 @@ nav a:hover {
 }
 
 .post-desc {
-  font-size: 2vw;
+  font-size: 1rem;
   padding: 1vw;
 }
 
@@ -128,6 +128,9 @@ nav a:hover {
     line-height: 1.5;
   }
 
+  .blog-posts h1 {
+    overflow-wrap: break-word;
+  }
   .header {
     margin: 1vh 1vw;
     position: static;
@@ -140,7 +143,29 @@ nav a:hover {
 
 @media only screen and (max-width: 400px) {
   html {
-    line-height: 1.2;
+    line-height: 1.5;
+  }
+
+  a, li {
+    font-size: 1rem;
+  }
+
+  p {
+    margin: 1.5rem;
+    font-size: 1rem;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font-size: 1.5rem;
+    overflow-wrap: break-word;
+  }
+
+  .blog-posts {
+    max-width: none;
   }
 
   .header {
